# AtumVR

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle  version.properties
atumvr-android/: README-ANDROID.md  build.gradle
atumvr-android/src/main/: AndroidManifest.xml
atumvr-android/src/main/cpp/: CMakeLists.txt  atumvr_jni.cpp
atumvr-android/src/main/java/me/phoenixra/atumvr/android/activity/: XrActivity.java
atumvr-android/src/main/java/me/phoenixra/atumvr/android/nativebridge/: NativeXRBridge.java
atumvr-api/: build.gradle
atumvr-api/src/main/java/me/phoenixra/atumvr/: AtumAppVR.java
atumvr-api/src/main/java/me/phoenixra/atumvr/api/: AtumVRAPI.java  AtumVRCore.java  AtumVRLogger.java  AtumVRProvider.java  AtumVRSession.java  AtumVRState.java  VRApp.java  VRCore.java  VRLogger.java  VRProvider.java  VRProviderType.java  VRSession.java  VRState.java
atumvr-api/src/main/java/me/phoenixra/atumvr/api/devices/: VRDevice.java  VRDeviceRole.java  VRDeviceType.java  VRDevicesManager.java
atumvr-api/src/main/java/me/phoenixra/atumvr/api/enums/: ControllerHand.java  ControllerType.java  EyeType.java  HandType.java
atumvr-api/src/main/java/me/phoenixra/atumvr/api/events/: VREvent.java
atumvr-api/src/main/java/me/phoenixra/atumvr/api/exceptions/: ActionManifestException.java  AtumVRException.java  VRException.java  VRInputException.java
atumvr-api/src/main/java/me/phoenixra/atumvr/api/input/: AtumVRInputHandler.java  DeviceRegisterInfo.java  InputAnalogData.java  InputDigitalData.java  InputOriginDeviceInfo.java  OpenVRInputHelper.java  VRInputAction.java  VRInputActionSet.java  VRInputHandler.java  VRInputHandlerDefault.java
atumvr-api/src/main/java/me/phoenixra/atumvr/api/misc/: AtumColor.java  AtumColorImmutable.java  AtumColorMutable.java  VRLocation.java
atumvr-api/src/main/java/me/phoenixra/atumvr/api/overlays/: VROverlay.java  VROverlayLocation.java  VROverlaysManager.java
atumvr-api/src/main/java/me/phoenixra/atumvr/api/provider/: VRProviderType.java
atumvr-api/src/main/java/me/phoenixra/atumvr/devices/: VRDevice.java  VRDeviceRole.java  VRDeviceType.java  VRDevicesManager.java
atumvr-core/: build.gradle
atumvr-core/src/main/java/me/phoenixra/atumvr/core/: AtumVRAPIDefault.java  AtumVRApp.java  AtumVRCore.java  OpenXRHelper.java  OpenXRPose.java  OpenXRProvider.java  OpenXRState.java  VRLogger.java  VRProvider.java  VRState.java  XRHelper.java  XRProvider.java  XRState.java
atumvr-example/: build.gradle
atumvr-example/src/main/java/me/phoenixra/atumvr/example/: ExampleFileLogger.java  ExampleHandEnum.java  ExampleResources.java  ExampleVRApp.java  ExampleVRCore.java  ExampleVRProvider.java
atumvr-example/src/main/resources/: vrApp_manifest.json
atumvr-example/src/main/resources/shaders/: fragment.fsh  vertex.fsh  vertex.vsh
atumvr-example/src/main/resources/shaders/for_multiView/: fragment.fsh  vertex.fsh  vertex.vsh
docs/: Rendering-Basics.md
docs/wiki/: Basics.md  Input-Advanced.md  Input-Basics.md  Miscellaneous.md  README.md  Rendering-Advanced.md  Rendering-Basics.md
gradle/wrapper/: gradle-wrapper.properties
(+328 files in other folders)
